拆成了每个元素独立画布

--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
-canvas{
-    outline: 1px dashed hotpink;
+.main{
+    position: absolute;
+    display: inline-block;
 }
+/*canvas{*/
+    /*outline: 1px dashed hotpink;*/
+/*}*/
